# chat

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  compose.yaml  docker-bake.hcl  pyproject.toml  release.config.js
.github/workflows/: ci.yaml
.opencode/plans/: sed-fix.md
docs/adr/: 001_channel_adapter_architecture.md
env/: pyproject.prod.toml
migrations/: env.py
migrations/versions/: 001_initial.py  002_content_type_and_settings.py  003_channel_and_delivery_status.py
scripts/: realtime_demo.py
src/chat/: banner.py  config.py  database.py  main.py  security.py
src/chat/api/: health.py
src/chat/api/graphql/: context.py  schema.py
src/chat/api/graphql/mutations/: conversation_mutation.py  message_mutation.py
src/chat/api/graphql/queries/: conversation_query.py  message_query.py
src/chat/api/graphql/subscriptions/: message_subscription.py
src/chat/api/graphql/types/: conversation.py  message.py
src/chat/api/internal/: inbound.py
src/chat/application/ports/: channel_adapter.py  conversation_repository.py  delivery_policy.py  message_repository.py  presence_service.py  read_state_repository.py  realtime_publisher.py
src/chat/application/services/: conversation_service.py  message_dispatcher.py  message_router.py  message_service.py  read_state_service.py
src/chat/domain/: enums.py  errors.py  events.py  utils.py
src/chat/domain/models/: communication_channel.py  conversation.py  conversation_settings.py  message.py  read_state.py
src/chat/infrastructure/adapters/: default_delivery_policy.py  email_channel_adapter.py  in_app_channel_adapter.py  sms_channel_adapter.py  whatsapp_channel_adapter.py
src/chat/infrastructure/db/: models.py
src/chat/infrastructure/db/repositories/: conversation_repository.py  message_repository.py  read_state_repository.py
src/chat/infrastructure/gateway/: gateway_client.py
src/chat/infrastructure/realtime/: in_memory_event_bus.py  valkey_event_bus.py
src/chat/tests/: conftest.py  test_conversations.py  test_gateway_client.py  test_inbound.py  test_messages.py  test_realtime.py  test_runtime.py  test_security.py
src/omnixys_chat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
