[project]
name = "chat"
version = "1.0.0"
description = "Omnixys Chat Service"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.1",
    "hypercorn>=0.18.0",
    "strawberry-graphql[fastapi]>=0.316.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.20",
    "httpx>=0.28.1",
    "redis>=5.2.0",
    "omnixys-commons @ git+https://github.com/omnixys/commons-python.git",
    "omnixys-config @ git+https://github.com/omnixys/config-python.git",
    "omnixys-database @ git+https://github.com/omnixys/database-python.git",
    "omnixys-observability @ git+https://github.com/omnixys/observability-python.git",
    "omnixys-cache @ git+https://github.com/omnixys/cache-python.git",
    "omnixys-security @ git+https://github.com/omnixys/security-python.git",
]

[project.scripts]
chat = "chat.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chat"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "ruff>=0.15.17",
    "mypy>=1.18.2",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "aiosqlite>=0.20.0",
    "respx>=0.22.0",
]

[tool.ruff]
line-length = 120   
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"src/chat/tests/**" = [
    "ANN401", "S101",
    "T20", "FBT", "D", "INP001",
    "PLR2004", "TC001", "TC003", "PLC0415",
    "SLF001", "EM101",
]
"src/**" = [
    "D", "ANN401", "ARG002", "S104", "S105", "S107",
    "TC001", "TC002", "TC003", "PLC0415",
    "TRY003", "TRY400", "EM101", "EM102",
    "BLE001", "S110", "PLW0603", "A002", "B904",
    "FAST002", "B008", "PLR2004", "FBT001", "PLR0915",
]
"src/chat/api/**" = [
    "SLF001", "S101",
]
"src/chat/domain/**" = [
    "SLF001",
]
"src/chat/application/**" = [
    "SLF001",
]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = [
    "opentelemetry.*",
    "redis.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["src/chat/tests"]
pythonpath = ["src"]
